@@ -5,6 +5,11 @@ devscripts (2.17.10) UNRELEASED; urgency=medium
     + Add dependency on debhelper; apparently autopkgtest in ubuntu doesn't
       pull it otherwise
 
+  [ Antonio Terceiro ]
+  * debc:
+    + add --list-changes option, similar to --list-debs but for displaying the
+      path to the .changes file.
+
  -- Mattia Rizzolo <mattia@debian.org>  Tue, 25 Jul 2017 14:18:24 +0200
 
 devscripts (2.17.9) unstable; urgency=medium
